--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,26 @@
     margin:2% 2% 2% 10%; 
 }
 
+.header__menu{
+    display: flex;
+    align-items: center;
+    justify-content:flex-start;
+    /*box-shadow:2px 0px 2px 1px var(--color-secundario);*/
+}
+
+.header__menu__logo{
+    padding:0% 2% 0% 2%;
+}
+
+.header__menu__texto{
+    margin:1% 2% 0% 2%;
+    text-decoration: none;
+    color: var(--color-secundario);
+    font-family: var(--fuente-principal);
+    font-size: 2rem;
+    font-weight: 600;
+}
+
 body {
     box-sizing: border-box;
     background-color: var(--color-primario);
@@ -41,6 +61,42 @@ body {
     border-radius: 24px;
 }
 
+.container__section__inputUser_pegar{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content:space-evenly;
+}
+
+.__textarea_pegar_button{
+    margin:0% 0% 0% 80%;
+    width: 18%;
+    font-family: var(--fuente-principal);
+    font-weight: 400;
+    font-size:0.9rem;
+    height: 10%;
+    padding: 2% 0% 2% 3%;
+    align-items: center;
+    display:flex;
+    flex-direction:row;
+    gap:5px;
+    background-color: var(--color-primario);
+    border-radius:24px;
+    border:2px solid var(--color-secundario);
+}
+
+.__textarea_pegar_button:hover{
+    background-color: var(--color-secundario);
+    border: 2px solid var(--color-secundario);
+    color: var(--color-terciario);
+    font-weight: 600;
+}
+.__textarea_pegar_button:disabled{
+    background-color: var(--color-primario);
+    border:solid 2px var(--color-secundario);
+    color:var(--color-secundario);
+    font-weight:500;
+}
+
 .container__section__texto__input{
     font-size:2rem;
     background-color: var(--color-primario);
@@ -51,7 +107,7 @@ body {
     height: 450px;
     width: 100%;
     border-radius:24px;
-    padding:10px;
+    padding:25px;
     box-sizing: border-box;
     overflow: auto;
     resize: none;
@@ -187,7 +243,10 @@ body {
 .header{
     margin:2% 2% 2% 4%; 
 }
-
+.header__menu__texto{
+    font-size: 1.5rem;
+    margin:0% 2% 0% 4%;
+}
 .container__contenido{
     flex-direction: column;
     padding:2%;
@@ -196,6 +255,26 @@ body {
     width:auto;
     box-sizing:border-box;
 }
+
+.container__section__inputUser_pegar{
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.__textarea_pegar_button{
+    padding:1% 0% 1% 4.3%;
+    border:2px solid var(--color-secundario);
+    width: 20%;
+    margin:0% 3% 2% 80%;
+}
+.__textarea_pegar_button:disabled{
+    padding:1% 0% 1% 4.3%;
+}
+
+.texto__button__pegar{
+    display: none;
+}
+
 .container__contenido__texto_Encriptado{
     width:auto;
     margin:5% 0% 0% 0%;
@@ -235,7 +314,7 @@ body {
         font-weight: 400;
     }
     #img__encriptado{
-        display: none;
+        display:none;
     }
 }
 
