--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@ body {
     background-color: var(--color-primario);
     border-radius:24px;
     border:2px solid var(--color-secundario);
+    cursor:pointer;
 }
 
 .__textarea_pegar_button:hover{
@@ -144,6 +145,7 @@ body {
     border:none;
     background-color: var(--color-primario);
     color: var(--color-secundario);
+    cursor:pointer;
 }
 .container__section__boton:hover{
     background-color: var(--color-secundario);
@@ -224,6 +226,7 @@ body {
     font-family: var(--fuente-principal);
     font-size:1rem;
     font-weight:400;
+    cursor:pointer;
 }
 
 .footer{
