--- a/styles/style.css
+++ b/styles/style.css
@@ -83,14 +83,13 @@ body {
     gap:5px;
     background-color: var(--color-secundario);
     border-radius:24px;
-    border:2px solid var(--color-terciario);
+    border-style: none;
     color: var(--color-terciario);
     cursor:pointer;
 }
 
 .__textarea_pegar_button:hover{
-    background-color: var(--color-rgbaSecundario);
-    border: 2px solid var(--color-secundario);
+    opacity: 0.8;
     color: var(--color-terciario);
     font-weight: 600;
 }
@@ -146,7 +145,7 @@ body {
     width:200px;
     padding:15px;
     border-radius:24px;
-    border:2px solid var(--color-secundario) !important;
+    border-style: none;
     font-family: var(--fuente-principal);
     font-size:1rem;
     font-weight:500;
@@ -156,8 +155,7 @@ body {
     cursor:pointer;
 }
 .container__section__boton:hover{
-    background-color:var(--color-rgbaSecundario);
-    border: 2px solid var(--color-secundario);
+    opacity: 0.8;
     color: var(--color-terciario);
     font-weight: 600;
 }
@@ -382,7 +380,7 @@ body {
         display:none !important;
     }
     .footer{
-        height: 7rem;
+        height: 5rem;
     }
 
 }
